Update config to be consistent with hardware wiring

--- a/config
+++ b/config
@@ -1,27 +1,16 @@
-
+{
 name=First from left
-logfile=first_from_left.log
+logfile=fourth_from_left.log
 pump_adress=21
-pump_pin=1
+pump_pin=14
 sensor_adress=68
-sensor_pin=4
+sensor_pin=1
 humidity_threshold=0.2
 interval=2
-
-
-
+wait_iterations=2
+}
+{
 name=Second from left
-logfile=second_from_left.log
-pump_adress=21
-pump_pin=2
-sensor_adress=68
-sensor_pin=3
-humidity_threshold=0.2
-interval=2
-
-
-
-name=Third from left
 logfile=third_from_left.log
 pump_adress=21
 pump_pin=3
@@ -29,15 +18,27 @@ sensor_adress=68
 sensor_pin=2
 humidity_threshold=0.2
 interval=2
-
-
+wait_iterations=2
+}
+{
+name=Third from left
+logfile=second_from_left.log
+pump_adress=21
+pump_pin=2
+sensor_adress=68
+sensor_pin=3
+humidity_threshold=0.2
+interval=2
+wait_iterations=2
+}
 {
 name=Fourth from left
-logfile=fourth_from_left.log
+logfile=first_from_left.log
 pump_adress=21
-pump_pin=14
+pump_pin=1
 sensor_adress=68
-sensor_pin=1
-humidity_threshold=3.0
-interval=30
+sensor_pin=4
+humidity_threshold=0.2
+interval=2
+wait_iterations=2
 }
